<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_bottom_first"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_bottom_second"
        android:icon="@drawable/ic_building"
        android:title="@string/building" />

    <item
        android:id="@+id/nav_bottom_third"
        android:icon="@drawable/ic_pie_chart"
        android:title="@string/revenue" />

    <item
        android:id="@+id/nav_bottom_four"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />

    <item
        android:id="@+id/nav_bottom_five"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/profile" />

</menu>